algunos mensajes y comentarios traducidos al ingles