@@ -3,11 +3,9 @@ package com.expectra.roombooking.service.impl;
 import com.expectra.roombooking.dto.BrandDTO;
 import com.expectra.roombooking.dto.ChainDTO;
 import com.expectra.roombooking.exception.ResourceNotFoundException;
-import com.expectra.roombooking.model.Brand;
 import com.expectra.roombooking.model.Chain;
 import com.expectra.roombooking.repository.ChainRepository;
 import com.expectra.roombooking.service.ChainService;
-import com.expectra.roombooking.service.ChainValidationService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -19,15 +17,12 @@ import java.util.stream.Collectors;
 
 @Service
 public class ChainServiceImpl implements ChainService {
-
     private final ChainRepository chainRepository;
-    private final ChainValidationService chainValidator;
-    private final ModelMapper modelMapper; // Add ModelMapper
+    private final ModelMapper modelMapper;
 
     @Autowired
-    public ChainServiceImpl(ChainRepository chainRepository, ChainValidationService chainValidator, ModelMapper modelMapper) { // Inject ModelMapper
+    public ChainServiceImpl(ChainRepository chainRepository, ModelMapper modelMapper) {
         this.chainRepository = chainRepository;
-        this.chainValidator = chainValidator;
         this.modelMapper = modelMapper;
     }
 
@@ -46,8 +41,7 @@ public class ChainServiceImpl implements ChainService {
 
     @Override
     public List<ChainDTO> getAllChains() {
-        List<Chain> chains = (List<Chain>) chainRepository.findAll();
-        return chains.stream()
+        return chainRepository.findAll().stream()
                 .map(chain -> modelMapper.map(chain, ChainDTO.class))
                 .collect(Collectors.toList());
     }
@@ -55,12 +49,12 @@ public class ChainServiceImpl implements ChainService {
     @Override
     @Transactional
     public ChainDTO updateChain(Long chainId, Chain chainDetails) {
-        chainValidator.validateName(chainDetails.getChainName());
-
         Chain chain = chainRepository.findById(chainId)
                 .orElseThrow(() -> new ResourceNotFoundException("Chain not found with id: " + chainId));
 
+        chain.setChainName(chainDetails.getChainName());
         chain.setChainDescription(chainDetails.getChainDescription());
+
         Chain updatedChain = chainRepository.save(chain);
         return modelMapper.map(updatedChain, ChainDTO.class);
     }
@@ -72,20 +66,14 @@ public class ChainServiceImpl implements ChainService {
                 .orElseThrow(() -> new ResourceNotFoundException("Chain not found with id: " + chainId));
         chainRepository.delete(chain);
     }
+
     @Override
-    @Transactional
     public List<BrandDTO> getAllBrandsByChainId(Long chainId) {
-        if (chainRepository.findById(chainId).isEmpty()) {
+        if (!chainRepository.existsById(chainId)) {
             throw new ResourceNotFoundException("Chain not found with id: " + chainId);
-        };
-        List<Brand> brands = chainRepository.getAllBrandsByChainId(chainId);
-        return brands.stream()
-                .map(brand -> {
-                    BrandDTO dto = new BrandDTO();
-                    dto.setBrandId(brand.getBrandId());
-                    dto.setBrandName(brand.getBrandName());
-                    return dto;
-                })
-                .toList();
+        }
+        return chainRepository.getAllBrandsByChainId(chainId).stream()
+                .map(brand -> modelMapper.map(brand, BrandDTO.class))
+                .collect(Collectors.toList());
     }
 }
